@@ -482,6 +482,33 @@
             </proof>
         </theorem>
     </subsection>
+
+    <subsection xml:id="subsection-MO-TM" acro="TM">
+        <title>Triangular Matrices</title>
+        <p>An upper, or lower, triangular matrix is exactly what it sounds like it should be, but here are the two relevant definitions.</p>
+        <definition xml:id="definition-UTM" acro="UTM">
+            <title>Upper Triangular Matrix</title>
+            <idx>upper triangular matrix</idx>
+            <idx>
+                <h>matrix</h>
+                <h>upper triangular</h>
+            </idx>
+            <statement>
+                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>upper triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\gt j</m>.</p>
+            </statement>
+        </definition>
+        <definition xml:id="definition-LTM" acro="LTM">
+            <title>Lower Triangular Matrix</title>
+            <idx>lower triangular matrix</idx>
+            <idx>
+                <h>matrix</h>
+                <h>lower triangular</h>
+            </idx>
+            <statement>
+                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>lower triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\lt j</m>.</p>
+            </statement>
+        </definition>
+    </subsection>
     <subsection xml:id="subsection-MO-MCC" acro="MCC">
         <title>Matrices and Complex Conjugation</title>
         <p>As we did with vectors (<xref ref="definition-CCCV" acro="CCCV"/>), we can define what it means to take the conjugate of a matrix.</p>
