@@ -17,21 +17,6 @@
     </introduction>
     <subsection xml:id="subsection-OD-TM" acro="TM">
         <title>Triangular Matrices</title>
-        <p>An upper, or lower, triangular matrix is exactly what it sounds like it should be, but here are the two relevant definitions.</p>
-        <definition xml:id="definition-UTM" acro="UTM">
-            <title>Upper Triangular Matrix</title>
-            <idx>upper triangular matrix</idx>
-            <statement>
-                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>upper triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\gt j</m>.</p>
-            </statement>
-        </definition>
-        <definition xml:id="definition-LTM" acro="LTM">
-            <title>Lower Triangular Matrix</title>
-            <idx>lower triangular matrix</idx>
-            <statement>
-                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>lower triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\lt j</m>.</p>
-            </statement>
-        </definition>
         <p>Obviously, properties of a lower triangular matrices will have analogues for upper triangular matrices.  Rather than stating two very similar theorems, we will say that matrices are <q>triangular of the same type</q> as a convenient shorthand to cover both possibilities and then give a proof for just one type.</p>
         <theorem xml:id="theorem-PTMT" acro="PTMT">
             <title>Product of Triangular Matrices is Triangular</title>
