@@ -30,6 +30,8 @@ only emply characteristic polynomial for algebraic multiplicities.
 *  Simplify the proof of Theorem DED, without using
 algebraic multiplicities.
 
+*  Move definitions and results for triangular matrices.
+Definitions UTM and LTM move from Section OD to Section MO.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -75,6 +77,7 @@ Change: Expand Example CAEHW
 Change: Re-title Example CAEHW to Example CASE
 Change: Theorem EMRCP, shorter proof with new Theorem ESM
 Change: Locate Theorem MNEM earlier, with new proof
+Change: Locate Definition UTM and Definition LTM earlier
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
